--- a/package.json
+++ b/package.json
@@ -3,32 +3,28 @@
   "version": "1.0.0",
   "description": "Svelte bindings for Makina",
   "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
+  "types": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/didierdemoniere/@ezy/svelte-makina",
+  "repository": "https://github.com/ezylean/svelte-makina",
   "license": "MIT",
   "keywords": [],
   "scripts": {
     "build": "run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
+    "build:main": "tsc -p tsconfig.json --skipLibCheck",
+    "build:module": "tsc -p tsconfig.module.json --skipLibCheck",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
-    "test": "run-s build test:*",
+    "test": "run-s test:*",
     "test:lint": "eslint src --ext .ts",
     "test:prettier": "prettier \"src/**/*.ts\" --list-different",
-    "test:unit": "nyc --silent ava",
+    "test:unit": "jest",
     "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch",
-    "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
-    "cov:html": "nyc report --reporter=html",
-    "cov:lcov": "nyc report --reporter=lcov",
-    "cov:send": "run-s cov:lcov && codecov",
-    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
+    "watch:test": "jest --watch",
+    "cov": "jest --coverage && open-cli coverage/lcov-report/index.html",
     "doc": "run-s doc:html && open-cli build/docs/index.html",
     "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out build/docs",
     "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
@@ -40,13 +36,13 @@
   "engines": {
     "node": ">=10"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
+    "@ezy/makina": "^4.1.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@testing-library/svelte": "^3.0.3",
+    "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "ava": "^3.12.1",
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -55,11 +51,18 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "gh-pages": "^3.1.0",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
+    "rollup": "^2.44.0",
+    "rollup-jest": "^1.1.1",
+    "rollup-plugin-svelte": "^7.1.0",
     "standard-version": "^9.0.0",
+    "svelte": "^3.37.0",
+    "svelte-preprocess": "^4.7.0",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.0",
     "typescript": "^4.0.2"
@@ -73,16 +76,18 @@
     "LICENSE",
     "README.md"
   ],
-  "ava": {
-    "failFast": true,
-    "timeout": "60s",
-    "typescript": {
-      "rewritePaths": {
-        "src/": "build/main/"
-      }
+  "jest": {
+    "transform": {
+      "^.+\\.ts?$": "ts-jest",
+      "^.+\\.svelte?$": [
+        "rollup-jest",
+        {
+          "configFile": "./rollup.config.js"
+        }
+      ]
     },
-    "files": [
-      "!build/module/**"
+    "modulePathIgnorePatterns": [
+      "<rootDir>/build/"
     ]
   },
   "config": {
@@ -98,5 +103,6 @@
     "exclude": [
       "**/*.spec.js"
     ]
-  }
+  },
+  "dependencies": {}
 }
